--- a/src/components/shared/CustomParagraph.astro
+++ b/src/components/shared/CustomParagraph.astro
@@ -3,6 +3,7 @@ export interface Props {
 	reveal?: boolean;
 	textColor?: string;
 	fontSize?: string;
+	class?: string;
 }
 const {
 	reveal = false,
@@ -12,7 +13,7 @@ const {
 ---
 
 <p
-	class:list={[{ reveal: reveal }, textColor, fontSize]}
+	class:list={[{ reveal: reveal }, textColor, fontSize, Astro.props.class]}
 	class="mb-2.5 text-pretty max-sm:mb-1"
 >
 	<slot />
