✨ feat: create posts pages

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -68,7 +68,7 @@ const icons = [
 			<section
 				class="z-0 mx-auto mt-10 w-1/2 p-2 max-sm:mt-0 max-sm:w-[90%]"
 			>
-				<Subtitle center>{CONTACT_TITLE}</Subtitle>
+				<Subtitle class="reveal" center>{CONTACT_TITLE}</Subtitle>
 				<div class="reveal mx-0 my-4 text-center">
 					<CustomParagraph>
 						{CONTACT_DESCRIPTION}
