--- a/src/components/shared/Subtitle.astro
+++ b/src/components/shared/Subtitle.astro
@@ -3,14 +3,16 @@ export interface Props {
 	left?: boolean;
 	center?: boolean;
 	right?: boolean;
+	class?: string;
 }
 const { center = false, left = false, right = false } = Astro.props;
 ---
 
 <h2
-	class="reveal my-2 text-4.5xl font-bold tracking-wide text-[var(--default-font-color)]"
+	class="my-2 text-4.5xl font-bold tracking-wide text-[var(--default-font-color)]"
 	class:list={[
 		{ 'text-left': left, 'text-center': center, 'text-right': right },
+		Astro.props.class,
 	]}
 >
 	<slot />
