--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -74,7 +74,7 @@ const headerLinks = [
 	<nav class="header-animation fixed top-0 z-[4] w-full">
 		<WidthContainer>
 			<ul
-				class="flex list-none flex-row justify-between p-0.5 max-sm:hidden [&>li]:self-center"
+				class="flex list-none flex-row items-center justify-between p-0.5 max-sm:hidden [&>li]:self-center"
 			>
 				<li class="mt-1 p-0.5">
 					<Link href="#home" aria-label={HEADER_HOME_ARIA_LABEL}>
