--- a/src/components/Header/LocaleSelector.astro
+++ b/src/components/Header/LocaleSelector.astro
@@ -55,6 +55,7 @@ const CURRENT_LANGUAGE = LANGUAGES_INFO[currentLocale].name;
 <div
 	id={dropdown_id}
 	class="z-10 hidden w-24 divide-y rounded-lg shadow max-sm:w-32"
+	tabindex="-1"
 >
 	<ul
 		class="rounded-md bg-[hsl(271.2,35.21%,15%,80%)] text-xs drop-shadow-[0rem_0rem_0.3rem_black] max-sm:text-xl"
