--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -31,7 +31,7 @@ const {
 ---
 
 <script>
-	document.addEventListener('DOMContentLoaded', () => {
+	document.addEventListener('astro:page-load', () => {
 		var lazyBackgrounds = [].slice.call(
 			document.querySelectorAll('.lazy-background')
 		);
