✨ feat: complete post

--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -47,6 +47,7 @@ const formatedDate = `${date.getMonth()}/${date.getDay()}/${date.getFullYear()}`
 				height="520"
 				width="925"
 			/>
+			<slot />
 		</SectionContainer>
 	</main>
 </Layout>
