--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -70,7 +70,7 @@ const icons = [
 			>
 				<Subtitle class="reveal" center>{CONTACT_TITLE}</Subtitle>
 				<div class="reveal mx-0 my-4 text-center">
-					<CustomParagraph>
+					<CustomParagraph class="text-2xl">
 						{CONTACT_DESCRIPTION}
 					</CustomParagraph>
 				</div>
