--- a/src/components/Header/LocaleSelector.astro
+++ b/src/components/Header/LocaleSelector.astro
@@ -44,7 +44,7 @@ const CURRENT_LANGUAGE = LANGUAGES_INFO[currentLocale].name;
 <button
 	id={id}
 	data-dropdown-toggle={dropdown_id}
-	class="inline-fle flex h-auto items-center gap-1 rounded-md bg-transparent px-1 text-center font-lato text-xs text-[var(--default-font-color2)] transition-all duration-200 ease-in-out hover:text-teal-300 focus:outline-none focus:ring-4 focus:ring-[--default-secundary-font-color-2] focus:drop-shadow-[0rem_0rem_0.3rem_aqua] max-sm:text-xl"
+	class="inline-fle flex h-auto items-center gap-1 rounded-md bg-transparent px-1 text-center font-lato text-lg text-[var(--default-font-color2)] transition-all duration-200 ease-in-out hover:text-teal-300 focus:outline-none focus:ring-4 focus:ring-[--default-secundary-font-color-2] focus:drop-shadow-[0rem_0rem_0.3rem_aqua] max-sm:text-xl"
 	type="button"
 >
 	<IconLanguage class="h-3.5 max-sm:h-5" />
