--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -106,7 +106,7 @@ const projects = [
 
 <SectionContainer id="work">
 	<div class="flex flex-col p-2">
-		<header class="reveal my-6 mb-2">
+		<header class="reveal my-5">
 			<Subtitle left>
 				{PROJECTS_TITLE}<br />
 				{PROJECTS_TITLE_AFTER_BR}
