--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -28,7 +28,7 @@ const {
 		<div class="p-2 font-lato text-[var(--default-font-color)]">
 			<div class="reveal">
 				<h1
-					class="mx-0 my-3 animate-presentation-title text-4.75xl font-bold text-[var(--default-secundary-font-color)] max-sm:text-5xl"
+					class="mx-0 my-3 animate-presentation-title text-6xl font-bold text-[var(--default-secundary-font-color)] max-sm:text-5xl"
 				>
 					{INTRO_TITLE}<br class="hidden max-sm:inline" />
 					{INTRO_TITLE_AFTER_BR1}
@@ -38,7 +38,7 @@ const {
 			</div>
 			<div class="reveal">
 				<h2
-					class="mx-0 my-3 animate-presentation-main-skill text-4.5xl font-bold max-sm:mt-4"
+					class="mx-0 my-3 animate-presentation-main-skill text-5xl font-bold max-sm:mt-4"
 				>
 					{INTRO_SUBTITLE}
 				</h2>
@@ -46,7 +46,10 @@ const {
 			<div
 				class="mx-0 my-3 animate-presentation-description break-words max-sm:mt-7"
 			>
-				<CustomParagraph set:html={INTRO_DESCRIPTION} />
+				<CustomParagraph
+					set:html={INTRO_DESCRIPTION}
+					class="text-2xl"
+				/>
 			</div>
 		</div>
 	</SectionContainer>
