🐞 fix: global styles

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -24,12 +24,12 @@ const {
 			<Subtitle left>{ABOUT_ME_TITLE}</Subtitle>
 		</header>
 		<CustomParagraph
-			class="text-2xl"
+			class="text-2xl max-sm:text-xl"
 			set:html={ABOUT_ME_DESCRIPTION}
 			reveal
 		/>
 		<CustomParagraph
-			class="text-2xl"
+			class="text-2xl max-sm:text-xl"
 			reveal
 			set:html={ABOUT_ME_DESCRIPTION_SECOND_PARAGRAPH}
 		/>
