--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -70,12 +70,12 @@ const icons = [
 			>
 				<Subtitle class="reveal" center>{CONTACT_TITLE}</Subtitle>
 				<div class="reveal mx-0 my-4 text-center">
-					<CustomParagraph class="text-2xl">
+					<CustomParagraph class="text-2xl max-sm:text-xl">
 						{CONTACT_DESCRIPTION}
 					</CustomParagraph>
 				</div>
 				<address
-					class="reveal mx-auto my-0 flex w-5/6 flex-row justify-evenly"
+					class="reveal mx-auto my-0 flex w-1/2 flex-row justify-evenly max-sm:w-3/4"
 				>
 					{
 						icons.map((icon) => (
