--- a/src/components/Header/SideBarLink.astro
+++ b/src/components/Header/SideBarLink.astro
@@ -13,6 +13,6 @@ const { label, ...atrributes } = Astro.props;
 >
 	<slot />
 	<Link {...atrributes}>
-		<h2 class="pl-3 text-3xl">{label}</h2>
+		<h2 class="pl-3 text-3xl max-sm:text-2xl">{label}</h2>
 	</Link>
 </li>
