--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -28,7 +28,7 @@ const {
 		<div class="p-2 font-lato text-[var(--default-font-color)]">
 			<div class="reveal">
 				<h1
-					class="mx-0 my-3 animate-presentation-title text-6xl font-bold text-[var(--default-secundary-font-color)] max-sm:text-5xl"
+					class="mx-0 my-3 animate-presentation-title text-6xl font-bold text-[var(--default-secundary-font-color)] max-sm:text-4xl"
 				>
 					{INTRO_TITLE}<br class="hidden max-sm:inline" />
 					{INTRO_TITLE_AFTER_BR1}
@@ -38,7 +38,7 @@ const {
 			</div>
 			<div class="reveal">
 				<h2
-					class="mx-0 my-3 animate-presentation-main-skill text-5xl font-bold max-sm:mt-4"
+					class="mx-0 my-3 animate-presentation-main-skill text-5xl font-bold max-sm:mt-4 max-sm:text-4xl"
 				>
 					{INTRO_SUBTITLE}
 				</h2>
@@ -48,7 +48,7 @@ const {
 			>
 				<CustomParagraph
 					set:html={INTRO_DESCRIPTION}
-					class="text-2xl"
+					class="text-2xl max-sm:text-xl"
 				/>
 			</div>
 		</div>
