--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -34,10 +34,10 @@ const formatedDate = primaryFormatDate(frontmatter.pubDate);
 	>
 	</div>
 	<Header {...i18n} {public_src} />
-	<main>
+	<main class="pt-10">
 		<SectionContainer
 			id="blog"
-			class="m-0 mx-auto pt-20 text-[var(--default-font-color)]"
+			class="m-0 mx-auto text-[var(--default-font-color)]"
 		>
 			<p class="text-sm text-[var(--default-font-color)]">
 				{formatedDate}
