✨ feat: add a new article

--- a/src/components/Articles.astro
+++ b/src/components/Articles.astro
@@ -19,7 +19,7 @@ const allPosts = await Astro.glob('../pages/posts/*.md');
 				{ARTICLE_TITLE}
 			</Subtitle>
 		</header>
-		<div class="flex flex-col">
+		<div class="flex flex-col gap-4">
 			{
 				allPosts.map((post) => (
 					<a href={post.url} class="reveal w-full">
