--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -61,7 +61,7 @@ const {
 		class="lazy-background h-full overflow-hidden bg-placeholder bg-cover bg-center bg-no-repeat font-lato shadow-lg shadow-black max-sm:self-center"
 	>
 		<div
-			class="h-full bg-[#453662c5] p-1 backdrop-brightness-[0.4] backdrop-grayscale transition-all duration-300 ease-in-out hover:bg-teal-600/0 hover:backdrop-grayscale-0 [&>*:first-child]:hover:scale-110 max-sm:[&>*:first-child]:hover:scale-105"
+			class="h-full bg-[#453662c5] p-1 backdrop-brightness-[0.4] backdrop-grayscale transition-all duration-300 ease-in-out hover:bg-teal-600/0 hover:backdrop-grayscale-0 [&>*:first-child]:hover:scale-105 max-sm:[&>*:first-child]:hover:scale-105"
 		>
 			<article
 				class="m-0 flex h-full w-11/12 flex-col items-start justify-between p-4 transition-[transform] duration-300 max-sm:w-full max-sm:justify-evenly max-sm:p-4 max-sm:px-3 max-sm:py-3"
@@ -86,12 +86,12 @@ const {
 					class:list={Astro.props.tagsClass}
 					class="flex w-full justify-between gap-2"
 				>
-					<ul class="flex flex-row gap-x-2">
+					<ul class="flex flex-row gap-x-3">
 						{
 							tags.map((tag) => (
 								<li>
 									<span
-										class="flex items-center gap-x-1 rounded-3xl border-2 p-2 px-3 text-base drop-shadow-[0_15px_20px_black]"
+										class="flex items-center gap-x-2 rounded-full border-2 px-2 py-1 text-base drop-shadow-[0_15px_20px_black]"
 										class:list={[tag.class]}
 									>
 										<tag.icon class="size-4" />
