✨ feat: change Twitter link

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -7,7 +7,6 @@ import IconMail from '@icons/IconMail.astro';
 import IconGithub from '@icons/IconGithub.astro';
 import IconLinkedin from '@icons/IconLinkedin.astro';
 import IconTwitter from '@icons/IconTwitter.astro';
-import SectionContainer from '@components/shared/SectionContainer.astro';
 
 export interface Props {
 	CONTACT_TITLE: string;
@@ -53,7 +52,7 @@ const icons = [
 		iconComponent: IconLinkedin,
 	},
 	{
-		href: 'https://twitter.com/carlosjorgerc',
+		href: 'https://twitter.com/carcu_ps',
 		title: CONTACT_TWITTER_ARIA_LABEL,
 		iconComponent: IconTwitter,
 	},
