--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,13 +47,14 @@ const { SEO_LANG, SEO_LOCALE, SEO_TITLE, SEO_DESCRIPTION } = Astro.props;
 			as="font"
 			href="https://fonts.googleapis.com/css?family=Lato:400italic%27&display=swap"
 		/>
+		<link rel="sitemap" href="/sitemap-index.xml" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{SEO_TITLE}</title>
 	</head>
-	<script
+	<link rel="stylesheet"
 		is:inline
 		src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"
-	></script>
+	/>
 	<body>
 		<ViewTransitions />
 		<slot />
