--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -12,6 +12,7 @@ type Experience = {
 	ocupation: String;
 	description: String;
 	logoFile: string;
+	logoAlt: string;
 };
 const { HEADER_EXPERIENCE, EXPERIENCE } = Astro.props;
 ---
@@ -28,7 +29,7 @@ const { HEADER_EXPERIENCE, EXPERIENCE } = Astro.props;
 				<li class=" mb-20 ms-8">
 					<div class="flex flex-row items-center">
 						<div class="absolute start-[-0.9rem] mb-1 w-7 overflow-hidden rounded-full border border-teal-200 bg-slate-300 shadow-lg shadow-teal-200">
-							<img class="aspect-square" src={`/images/${job.logoFile}`} alt="" />
+							<img class="aspect-square" src={`/images/${job.logoFile}`} alt={job.logoAlt} />
 						</div>
 						<h3 class="reveal-experience-info my-0.5 text-xl font-semibold text-teal-200">
 							{job.ocupation}
