--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -25,7 +25,7 @@ const {
 		id="home"
 		class="flex h-screen flex-col justify-evenly pt-0 max-sm:h-[100dvh]"
 	>
-		<div class="p-2 font-lato text-[var(--default-font-color)]">
+		<div class="p-2 font-lato text-[var(--default-font-color)] max-w-2xl">
 			<div class="reveal">
 				<h1
 					class="mx-0 my-3 animate-presentation-title text-6xl font-bold text-[var(--default-secundary-font-color)] max-sm:text-4xl"
