✨ feat: change Vue Fluid DnD name for Fluid DnD

--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -74,11 +74,11 @@ const { PROJECTS_TITLE, PROJECTS_TITLE_AFTER_BR, PROYECTS } = Astro.props;
 
 const projects = [
 	{
-		id: 'vue-fluid-dnd',
-		title: 'Vue Fluid DnD',
-		githubLink: 'https://github.com/carlosjorger/vue-fluid-dnd/',
+		id: 'fluid-dnd',
+		title: 'Fluid DnD',
+		githubLink: 'https://github.com/carlosjorger/fluid-dnd/',
 		imageSrc: '[&.visibleImg]:bg-vuefluiddnd',
-		website: 'https://vue-fluid-dnd.netlify.app/',
+		website: 'https://fluid-dnd.netlify.app/',
 		...PROYECTS.VUE_FLUID_DND,
 		tags: [TAGS.VUE, TAGS.TYPESCRIPT],
 	},
