--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 		<meta name="description" content={SEO_DESCRIPTION} />
 		<meta
 			name="keywords"
-			content="HTML,CSS,JavaScript,Github,Repository,Portfolio,Website,Github Page,Cuvimaker,Rusty Copier,Vue Fluid DnD"
+			content="HTML,CSS,JavaScript,Github,Repository,Portfolio,Website,Github Page,Cuvimaker,Rusty Copier,Vue Fluid DnD, Fluid DnD"
 		/>
 		<meta name="author" content="carlosjorger" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
