✨ feat: add group tailwind classes to work

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -2,7 +2,7 @@
 import Subtitle from '@shared/Subtitle.astro';
 import CustomParagraph from '@shared/CustomParagraph.astro';
 import SectionContainer from './shared/SectionContainer.astro';
-
+// TODO: add a more original description
 export interface Props {
 	ABOUT_ME_TITLE: string;
 	ABOUT_ME_DESCRIPTION: string;
