--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -28,7 +28,7 @@ const { HEADER_EXPERIENCE, EXPERIENCE } = Astro.props;
 			EXPERIENCE.map((job) => (
 				<li class=" mb-20 ms-8">
 					<div class="flex flex-row items-center">
-						<div class="absolute start-[-0.9rem] mb-1 overflow-hidden rounded-full border border-teal-200 bg-slate-300 shadow-lg shadow-teal-200">
+						<div class="absolute start-[-0.9rem] mb-1 overflow-hidden rounded-full border border-teal-200 bg-slate-50 shadow-lg shadow-teal-800/90">
 							<img class="size-7" src={`/images/${job.logoFile}`} alt={job.logoAlt} />
 						</div>
 						<h3 class="reveal-experience-info my-0.5 text-xl font-semibold text-teal-200">
