--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -58,13 +58,13 @@ const {
 >
 	<div
 		class:list={[imageSrc]}
-		class="lazy-background h-full overflow-hidden bg-placeholder bg-cover bg-center bg-no-repeat font-lato shadow-lg shadow-black max-sm:self-center"
+		class="lazy-background h-full overflow-hidden bg-placeholder bg-center bg-no-repeat font-lato shadow-lg shadow-black max-sm:self-center group bg-105% hover:bg-100% transition-[background-size] duration-300 ease-in-out"
 	>
 		<div
-			class="h-full bg-[#453662c5] p-1 backdrop-brightness-[0.4] backdrop-grayscale transition-all duration-300 ease-in-out hover:bg-teal-600/0 hover:backdrop-grayscale-0 [&>*:first-child]:hover:scale-105 max-sm:[&>*:first-child]:hover:scale-105"
+			class="h-full bg-[#453662c5] p-1 backdrop-brightness-[0.4] backdrop-grayscale transition-all duration-300 ease-in-out hover:bg-teal-600/0 hover:backdrop-grayscale-0"
 		>
 			<article
-				class="m-0 flex h-full w-11/12 flex-col items-start justify-between p-4 transition-[transform] duration-300 max-sm:w-full max-sm:justify-evenly max-sm:p-4 max-sm:px-3 max-sm:py-3"
+				class="m-0 flex min-h-64 w-11/12 flex-col items-start justify-between p-5 transition-[transform] duration-300 max-sm:w-full max-sm:justify-evenly max-sm:p-5 max-sm:px-4 max-sm:py-4 group-hover:scale-105 max-sm:group-hover:scale-105"
 			>
 				<header
 					class="m-1 text-xl font-extrabold text-teal-200 max-sm:text-[1.65rem]"
@@ -103,7 +103,7 @@ const {
 					</ul>
 					<div class="flex flex-row self-start">
 						<IconLinkContainer
-							class="h-6 w-6"
+							class="h-7 w-7"
 							href={githubLink}
 							title={anchorLabel}
 						>
@@ -113,7 +113,7 @@ const {
 						{
 							website !== undefined && (
 								<IconLinkContainer
-									class="h-6 w-6"
+									class="h-7 w-7"
 									href={website}
 									title={anchorLabel}
 								>
